AWS SDK for Java 1.9.40